<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="PlcCx9020" Id="{9b9840e2-d1d0-4c39-97c2-bde06627a2c6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// dSub 25
	DI_0_0 AT %IX0.0: BOOL;
	DI_0_1 AT %IX0.1: BOOL;
	DI_0_2 AT %IX0.2: BOOL;
	DI_0_3 AT %IX0.3: BOOL;
	DI_0_4 AT %IX0.4: BOOL;
	DI_0_5 AT %IX0.5: BOOL;
	DI_0_6 AT %IX0.6: BOOL;
	DI_0_7 AT %IX0.7: BOOL;
	DI_1_0 AT %IX1.0: BOOL;
	DI_1_1 AT %IX1.1: BOOL;
	DI_1_2 AT %IX1.2: BOOL;
	DI_1_3 AT %IX1.3: BOOL;
	DI_1_4 AT %IX1.4: BOOL;
	DI_1_5 AT %IX1.5: BOOL;
	DI_1_6 AT %IX1.6: BOOL;
	DI_1_7 AT %IX1.7: BOOL;
	// Sicherheitsbuchsen
	DI_2_0 AT %IX2.0: BOOL;
	DI_2_1 AT %IX2.1: BOOL;
	DI_2_2 AT %IX2.2: BOOL;
	DI_2_3 AT %IX2.3: BOOL;
	DI_2_4 AT %IX2.4: BOOL;
	DI_2_5 AT %IX2.5: BOOL;
	DI_2_6 AT %IX2.6: BOOL;
	DI_2_7 AT %IX2.7: BOOL;
	DI_3_0 AT %IX3.0: BOOL;
	DI_3_1 AT %IX3.1: BOOL;
	DI_3_2 AT %IX3.2: BOOL;
	DI_3_3 AT %IX3.3: BOOL;
	DI_3_4 AT %IX3.4: BOOL;
	DI_3_5 AT %IX3.5: BOOL;
	DI_3_6 AT %IX3.6: BOOL;
	DI_3_7 AT %IX3.7: BOOL;
	DI AT %IB0: ARRAY[0..3] OF BYTE; 

	// dSub 25
	DA_0_0 AT %QX0.0: BOOL;
	DA_0_1 AT %QX0.1: BOOL;
	DA_0_2 AT %QX0.2: BOOL;
	DA_0_3 AT %QX0.3: BOOL;
	DA_0_4 AT %QX0.4: BOOL;
	DA_0_5 AT %QX0.5: BOOL;
	DA_0_6 AT %QX0.6: BOOL;
	DA_0_7 AT %QX0.7: BOOL;
	DA_1_0 AT %QX1.0: BOOL;
	DA_1_1 AT %QX1.1: BOOL;
	DA_1_2 AT %QX1.2: BOOL;
	DA_1_3 AT %QX1.3: BOOL;
	DA_1_4 AT %QX1.4: BOOL;
	DA_1_5 AT %QX1.5: BOOL;
	DA_1_6 AT %QX1.6: BOOL;
	DA_1_7 AT %QX1.7: BOOL;
	// Sicherheitsbuchsen
	DA_2_0 AT %QX2.0: BOOL;
	DA_2_1 AT %QX2.1: BOOL;
	DA_2_2 AT %QX2.2: BOOL;
	DA_2_3 AT %QX2.3: BOOL;
	DA_2_4 AT %QX2.4: BOOL;
	DA_2_5 AT %QX2.5: BOOL;
	DA_2_6 AT %QX2.6: BOOL;
	DA_2_7 AT %QX2.7: BOOL;
	DA_3_0 AT %QX3.0: BOOL;
	DA_3_1 AT %QX3.1: BOOL;
	DA_3_2 AT %QX3.2: BOOL;
	DA_3_3 AT %QX3.3: BOOL;
	DA_3_4 AT %QX3.4: BOOL;
	DA_3_5 AT %QX3.5: BOOL;
	DA_3_6 AT %QX3.6: BOOL;
	DA_3_7 AT %QX3.7: BOOL;
	DA AT %QB0: ARRAY[0..3] OF BYTE;
	
	// dSub 25
	AI_0 AT %IW10: INT;			// Analogeingang 0
	AI_1 AT %IW12: INT;			// Analogeingang 1
	
	// Sicherheitsbuchsen
	AI_2 AT %IW14: INT;			// Analogeingang 2
	AI_3 AT %IW16: INT;			// Analogeingang 3
	AI AT %IW10: ARRAY[0..7] OF BYTE;
	
	
	// dSub 25
	AA_0 AT %QW10: INT;			// Analogausgang 0	
	// Sicherheitsbuchsen
	AA_1 AT %QW12: INT;			// Analogausgang 1	
	AA_2 AT %QW14: INT;			// Analogausgang 2	
	AA_3 AT %QW16: INT;			// Analogausgang 3	
	AA AT %QW10: ARRAY[0..7] OF BYTE;
	 	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>